# react-on-fastapi

./: .mise.toml  Dockerfile  README.md  Taskfile.yml  build-frontend.sh  docker-compose.yml
backend/: Dockerfile  README.md  main.py  openapi.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: docs.py  frontend.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: blog.py  health.py
backend/app/core/: auth.py  config.py  database.py
backend/app/crud/: blog.py
backend/app/models/: __init__.py  blog.py
backend/app/schemas/: __init__.py  blog.py  health.py
backend/scripts/: export_openapi.py
front/: index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx
front/src/api/model/: blogPost.ts  blogPostCreate.ts  blogPostUpdate.ts  blogPostUpdateAuthor.ts  blogPostUpdateContent.ts  blogPostUpdateTitle.ts  blogPostUpdatedAt.ts  hTTPValidationError.ts  healthCheckResponse.ts  index.ts  validationError.ts  validationErrorLocItem.ts
front/src/components/: ApiStatus.tsx  BlogPostForm.tsx  BlogPostList.tsx
front/src/components/common/header/: index.tsx
front/src/components/common/layout/: index.tsx
front/src/components/common/sidebar/: index.tsx
front/src/pages/Blog/: Create.tsx  Edit.tsx  index.tsx
front/src/pages/Dashboard/: index.tsx
